@@ -24,6 +24,8 @@ Revision 0.1.10, released XX-XX-2017
 - True division operation now supported by Integer type.
 - The __contains__(), __reverse__() methods implemented for container types
 - Iterator protocol support implemented for all container types
+- Almost complete Python list and dict protocols added to SequenceOf/SetOf and
+  Sequence/Set respectively
 - Fix to divmod operation implementation in Integer type.
 - Fix to IntegerDecoder's precomputed value map on Python 3.
 - Fix to base ASN.1 types to run in "unicode_literals" mode.
@@ -34,8 +36,8 @@ Revision 0.1.10, released XX-XX-2017
   constraints being added on subtyping effectively further narrow the set of
   allowed values, which aligns well with the notion of subtyping.
 - Fix to NamedTypes methods to handle .getTagMap() returning None
-- Author's email changed, copyright extended to 2017
 - Fix to Set/Sequence.setDefaultComponents() to return self
+- Author's email changed, copyright extended to 2017
 
 Revision 0.1.9, released 28-09-2015
 -----------------------------------
